@@ -1,3 +1,11 @@
+2004-05-05  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_ctl.erl: Added command for listing all registered
+	users
+
+	* src/ejabberd_ctl.erl: Bugfix, support for text-load and restore
+	(thanks to Leif Johansson)
+
 2004-05-04  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/web/ejabberd_web_admin.erl: Updated
